# Hand2Word

./: README.md  run_test_simple.sh  start_back_end.sh  test_replay_AWS.py
iac/: README.md  dynamodb-connections.tf  dynamodb-kb-jobs.tf  elasticache-redis.tf  lambda-ingress.tf  lambda-kb-aliases.tf  lambda-kb-ingest.tf  lambda-kb-submit.tf  lambda-outbound.tf  s3-knowledge-base.tf  sns-sqs-kb-aliases.tf  sns-sqs-kb.tf  variables.tf
iac/lambda/: ingress_handler.py
iac/lambda/kb-aliases/: README.md  deploy.sh  (+6 more)
notebooks/: 2.data_analysis.ipynb  README.md
src/frontend-service/: README.md  app.py  hand_app.py  pyproject.toml
src/frontend-service/frontend/app/: globals.css  page.tsx
src/frontend-service/frontend/app/api/chat/: route.ts
src/frontend-service/frontend/app/autocorrect/: page.tsx
src/frontend-service/frontend/app/training/: page.tsx
src/frontend-service/frontend/components/autocorrect/: LiveTab.tsx  SettingsTab.tsx  Tabs.tsx
src/frontend-service/frontend/components/chat/: ChatFab.tsx  ChatWidget.tsx  ChatWindow.tsx  utils.ts
src/frontend-service/frontend/components/demo/: AutocorrectApp.tsx  TrainingGame.tsx
src/letter-model-service/: Dockerfile  Kinesis_implementation.md  README.md  main.py  pyproject.toml  test_local.sh
src/letter-model-service/logs/: test_landmarks.txt  tests.txt
src/letter-model-service/model/: __init__.py
src/letter-model-service/services/: asl_service.py  keypoint_classifier.py
src/letter-model-service/tests/: conftest.py  test_asl_service.py
src/letter-model-service/utils/: tracer.py
src/word-resolver-service/: .dockerignore  Dockerfile  README.md  config.py  main.py  models.py  pyproject.toml  pytest.ini  requirements.txt  test_docker_local.sh
src/word-resolver-service/services/: __init__.py  commit_engine.py  finger_spelling_agent.py  kinesis_consumer.py  redis_manager.py  word_resolver.py
src/word-resolver-service/tests/: __init__.py  conftest.py  test_commit_engine.py  test_redis_manager.py
(+5 files in other folders)
