[project]
name = "letter-model-sevice"
version = "0.2.0"
description = "ASL Model Serving Service - Kinesis Consumer/Producer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.35.0",
    "dotenv>=0.9.9",
    "numpy>=2.1.3",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "opentelemetry-exporter-jaeger-thrift>=1.21.0",
    "opentelemetry-exporter-jaeger>=1.21.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.15.0",
    "tensorflow>=2.19.0",
]

[tool.coverage.run]
source = ["services", "utils", "constant"]
omit = [
    "*/tests/*",
    "*/utils/tracer.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:"
]
