[project]
name = "word-resolver-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.34.0",
    "fastapi>=0.109.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pymongo>=4.6.0",
    "python-json-logger>=2.0.7",
    "redis>=5.0.1",
    "uvicorn[standard]>=0.27.0",
]
